--- a/CSS/style.css
+++ b/CSS/style.css
@@ -69,9 +69,7 @@ h2
 {
     padding: 40px;
     background-color: var(--secondary-background);
-    border-radius: 40px 40px 0px 0px;
-
-    
+    border-radius: 40px 40px 0px 0px; 
 }
 
 .grid
@@ -79,45 +77,55 @@ h2
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 40px;
+}
 
+@media (orientation: landscape) 
+{
+    body
+    {
+    font-size: 14px;
+    }
+
+    nav 
+    {
+    padding: 10px 20px 10px 20px;
+    height: 46px;
+    }
+
+    nav div a 
+    {
+    margin: auto 20px auto 20px;
+    }
+
+    .page
+    {
+    padding: 20px;
+    border-radius: 20px 20px 0px 0px; 
+    }
+
+    .grid
+    {
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        gap: 20px;
+    }
+
+    .grid a
+    {
+    border-radius: 15px;
+    }
 }
 
 .grid a
 {
     width: 100%;
-    border-radius: 10px;
+    border-radius: 30px;
 }
 
 .grid img
 {
     width: 80%;
     margin: 10%;
-
 }
-/*
-::-webkit-scrollbar 
-{
-    width: 40px;
-}
-
-::-webkit-scrollbar-track 
-{
-    background: rgba(0, 0, 0, 0); 
-}
-
-::-webkit-scrollbar-thumb 
-{
-    border: 15px rgba(0, 0, 0, 0) solid;
-    background-color: var(--quaternary-background);
-    background-clip: padding-box;
-    border-radius: 100px;
-}
-
-::-webkit-scrollbar-thumb:hover 
-{
-    background-color: var(--tertiary-background); 
-}
-*/
 
 .About
 {
