--- a/CSS/style.css
+++ b/CSS/style.css
@@ -83,24 +83,24 @@ h2
 {
     body
     {
-    font-size: 14px;
+        font-size: 14px;
     }
 
     nav 
     {
-    padding: 10px 20px 10px 20px;
-    height: 46px;
+        padding: 10px 20px 10px 20px;
+        height: 46px;
     }
 
     nav div a 
     {
-    margin: auto 20px auto 20px;
+        margin: auto 20px auto 20px;
     }
 
     .page
     {
-    padding: 20px;
-    border-radius: 20px 20px 0px 0px; 
+        padding: 20px;
+        border-radius: 20px 20px 0px 0px; 
     }
 
     .grid
@@ -109,16 +109,20 @@ h2
         gap: 20px;
     }
 
-    .grid a
+    img
     {
-    border-radius: 15px;
+        border-radius: 30px;
     }
 }
 
 .grid a
 {
     width: 100%;
-    border-radius: 30px;
+}
+
+img
+{
+    border-radius: 15px;
 }
 
 .grid img
