--- a/CSS/style.css
+++ b/CSS/style.css
@@ -109,7 +109,7 @@ h2
         gap: 20px;
     }
 
-    img
+    .grid div
     {
         border-radius: 30px;
     }
@@ -120,7 +120,7 @@ h2
     width: 100%;
 }
 
-img
+.grid div
 {
     border-radius: 15px;
 }
