--- a/CSS/style.css
+++ b/CSS/style.css
@@ -113,11 +113,21 @@ h2
     {
         border-radius: 30px;
     }
+
+    img
+    {
+        border-radius: 30px;
+    }
 }
 
 .grid a
 {
     width: 100%;
+    border-radius: 15px;
+}
+
+img
+{
     border-radius: 15px;
 }
 
